[gd_scene load_steps=2 format=3 uid="uid://cwtrkmvyyrru7"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_1qhgm"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1qhgm")

[node name="Background" type="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="PanelContainer" type="PanelContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -158.0
offset_right = 148.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "游戏暂停"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator"]
layout_mode = 2

[node name="ResumeButton" type="Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "继续游戏"

[node name="SaveButton" type="Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "保存游戏"

[node name="SaveMessageLabel" type="Label"]
visible = false
layout_mode = 2
text = "游戏已保存"
horizontal_alignment = 1

[node name="LoadButton" type="Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "读取游戏"

[node name="HSeparator2" type="HSeparator"]
layout_mode = 2

[node name="QuitButton" type="Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "返回主菜单" 